--- a/src/components/standings/Standings.module.css
+++ b/src/components/standings/Standings.module.css
@@ -2,8 +2,7 @@
 .container{
     background-color: rgb(0, 0, 0); 
     display: flex;
-    /* width: 50em;
-    height: 5em; */
+    width: 50%;
     color: whitesmoke;
     padding: 2%;
     align-items: center;
@@ -12,6 +11,7 @@
     justify-content: space-evenly;
     flex: 0 0 40em;
 }
+
 .topTitle{
     /* display: flex; */
     font-size: 4em;
