--- a/src/routes/details.module.css
+++ b/src/routes/details.module.css
@@ -8,4 +8,9 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 }
-
+.link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
